Fixed navigation z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -3475,7 +3475,7 @@ footer ul.menu-footer li a {
 header {
   width: 100%;
   top: 0;
-  z-index: 5;
+  z-index: 9999;
   background-color: #0a0a0a;
 }
 
